force-app/main/default/objects/LOAN_DETAIL__c/LOAN_DETAIL__c.object-meta.xml
<CustomObject>
    <label>LOAN DETAIL</label>
    <nameField>
        <displayFormat>LD-{0000}</displayFormat>
        <label>LOAN DETAIL ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LOANS DETAILS</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>