force-app/main/default/objects/LOAN_DETAIL__c/fields/Account_Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Holder_Name__c</fullName>
    <formula>Account_Number__r.Account_Holder_Name__c</formula>
    <label>Account Holder Name</label>
    <type>Text</type>
</CustomField>