force-app/main/default/objects/LOAN_DETAIL__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <label>Account Number</label>
    <referenceTo>ACCOUNT__c</referenceTo>
    <relationshipLabel>LOANS DETAILS</relationshipLabel>
    <relationshipName>LOANS_DETAILS</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>