force-app/main/default/objects/LOAN_DETAIL__c/fields/Installment_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Installment_Amount_Paid__c</fullName>
    <label>Toatal Installment Amount Paid</label>
    <precision>17</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>