force-app/main/default/objects/LOAN_DETAIL__c/fields/Loan_Name__c.field-meta.xml
<CustomField>
    <fullName>Loan_Name__c</fullName>
    <label>Loan Name</label>
    <referenceTo>LOAN__c</referenceTo>
    <relationshipLabel>LOANS DETAILS</relationshipLabel>
    <relationshipName>LOANS_DETAILS</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>