force-app/main/default/objects/LOAN_DETAIL__c/fields/Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>Loan_Type__c</fullName>
    <formula>Loan_Name__r.Loan_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Type</label>
    <type>Text</type>
</CustomField>