force-app/main/default/objects/LOAN_DETAIL__c/fields/Remaing_Installment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Remaing_Installment_Amount__c</fullName>
    <formula>Loan_Name__r.Loan_Amount__c -  Installment_Amount_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Remaing Installment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>