force-app/main/default/objects/LOAN_DETAIL__c/fields/Remaing_Installments__c.field-meta.xml
<CustomField>
    <fullName>Remaing_Installments__c</fullName>
    <formula>IF(
 Remaing_Installment_Amount__c = 0,

 0,

 Loan_Name__r.Total_Number_Of_Installments__c -  Total_Installments_Paid__c

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaing Installments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>