force-app/main/default/objects/LOAN_DETAIL__c/fields/Total_Installments_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Installments_Paid__c</fullName>
    <label>Total Installments Paid</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>