force-app/main/default/objects/LOAN_DETAIL__c/validationRules/Remaing_Installment_Amount_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Remaing_Installment_Amount_check</fullName>
    <active>true</active>
    <errorConditionFormula>IF(

 Remaing_Installments__c =0,

  IF( Remaing_Installment_Amount__c = 0, false, true) , 

false)</errorConditionFormula>
    <errorDisplayField>Installment_Amount_Paid__c</errorDisplayField>
    <errorMessage>Last installemnt should pay all the remaining amount of loan.</errorMessage>
</ValidationRule>