force-app/main/default/objects/LOAN_DETAIL__c/validationRules/Remaing_Installment_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Remaing_Installment_check</fullName>
    <active>true</active>
    <errorConditionFormula>IF(

 Remaing_Installments__c &lt; 0 ||  Total_Installments_Paid__c = 0,

 true,

 false

)</errorConditionFormula>
    <errorDisplayField>Total_Installments_Paid__c</errorDisplayField>
    <errorMessage>Total Paid Installments cannot be greater than total installments or equals to zero.</errorMessage>
</ValidationRule>